apps/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-web
  labels:
    app: portfolio-web
spec:
  selector:
    app: portfolio-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
