apps/portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-web
  labels:
    app: portfolio-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kennethblack.me
        - www.kennethblack.me
      secretName: portfolio-tls
  rules:
    - host: kennethblack.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-web
                port:
                  number: 80
    - host: www.kennethblack.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-web
                port:
                  number: 80
